--- a/pyast.opam
+++ b/pyast.opam
@@ -15,6 +15,7 @@ remove:  []
 depends: [
   "base" {>= "v0.12.0"}
   "dune" {>= "1.3.0" & build}
+  "menhir"
   "ocaml" {>= "4.07"}
   "ocaml-compiler-libs"
   "stdio" {>= "v.0.12.0"}
