--- a/minipy.opam
+++ b/minipy.opam
@@ -13,12 +13,12 @@ install: []
 remove:  []
 
 depends: [
-  "base" {>= "v0.12.0"}
+  "base" {>= "v0.14" & < "v0.15"}
   "dune" {>= "1.3.0" & build}
   "menhir"
   "ocaml" {>= "4.07"}
   "ocaml-compiler-libs"
-  "stdio" {>= "v.0.12.0"}
+  "stdio" {>= "v0.14" & < "v0.15"}
   "zarith"
 ]
 
