--- a/minipy.opam
+++ b/minipy.opam
@@ -18,6 +18,10 @@ depends: [
   "menhir"
   "ocaml" {>= "4.07"}
   "ocaml-compiler-libs"
+  "ppx_custom_printf" {>= "v0.14" & < "v0.15"}
+  "ppx_expect" {>= "v0.14" & < "v0.15"}
+  "ppx_sexp_conv" {>= "v0.14" & < "v0.15"}
+  "ppx_yojson_conv" {>= "v0.14" & < "v0.15"}
   "stdio" {>= "v0.14" & < "v0.15"}
   "zarith"
 ]
