--- a/minipy.opam
+++ b/minipy.opam
@@ -15,6 +15,9 @@ remove:  []
 depends: [
   "base" {>= "v0.14" & < "v0.15"}
   "dune" {>= "1.3.0" & build}
+  "js_of_ocaml-ppx"
+  "js_of_ocaml"
+  "js_of_ocaml-tyxml"
   "menhir"
   "ocaml" {>= "4.07"}
   "ocaml-compiler-libs"
@@ -26,6 +29,7 @@ depends: [
   "sexplib" {>= "v0.14" & < "v0.15"}
   "stdio" {>= "v0.14" & < "v0.15"}
   "zarith"
+  "zarith_stubs_js" {>= "v0.14" & < "v0.15"}
 ]
 
 depopts: [
